SERVER-34435 Change Versioning class to databaseVersion namespace and related cleanup